# PeriodicTable

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml
source/: Attenuation_coefficients_chemical_elements.xlsx  ElementData.ipynb  InteractivePeriodicSystem.ipynb  PeriodicSystem.ipynb
source/__code/: __init__.py  interactive_periodic_table.py
